syntax = "proto3";
package helloworld;

service Greeter {
  // Простой запрос-ответ
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  
  // Двунаправленный поток для постоянного соединения
  rpc ChatStream (stream ClientMessage) returns (stream ServerMessage) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message ClientMessage {
  string text = 1;
}

message ServerMessage {
  string text = 1;
}